data binding related

--- a/jumpstart/src/index.html
+++ b/jumpstart/src/index.html
@@ -6,8 +6,19 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+  <style type="text/css">
+     body{background-color:#1d1717!important;color: #ffffff;}
+     input[type="text"]{color: #333;background: #fdfdfd;border: 1px solid #333;margin: 10px 10px 0 0;padding: 4px;}
+     label{padding: 4px;margin: 10px 10px 0 0;font-weight: normal;}
+     i{color:#727770fc!important;letter-spacing: 1px;display: block ;}
+     p.binding{color: #19de19;letter-spacing: 1px;}
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+
+  <app-root></app-root>  
+    
 </body>
 </html>
