data binding property binding

--- a/jumpstart/src/index.html
+++ b/jumpstart/src/index.html
@@ -9,16 +9,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
   <style type="text/css">
-     body{background-color:#1d1717!important;color: #ffffff;}
-     input[type="text"]{color: #333;background: #fdfdfd;border: 1px solid #333;margin: 10px 10px 0 0;padding: 4px;}
+     body{background-color:#1d1717!important;color: #333;}
+     input[type="text"]{color: #333!important;background: #fdfdfd;border: 1px solid #333;margin: 10px 10px 0 0;padding: 4px;}
+     input[disabled]{background-color: gray; border: 0px;}
      label{padding: 4px;margin: 10px 10px 0 0;font-weight: normal;}
      i{color:#727770fc!important;letter-spacing: 1px;display: block ;}
      p.binding{color: #19de19;letter-spacing: 1px;}
+     b{color: #ffffff8c;}
+     h3{color:#749825;}
+     h4{color:#ffffffba;}
+
+     mark{color:#ec4b4b; background:transparent;}
   </style>
 </head>
 <body>
 
   <app-root></app-root>  
+
+  <footer>    
+    <p><b>Powered by </b>Program Cafe</p>
+  </footer>
     
 </body>
 </html>
